logo on IE was quirky. fixed

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -149,8 +149,8 @@ header {
     }
     img {
       display: block;
-      width: auto;
-      height: auto;
+      width: 100%;
+      height: 100%;
       max-height: 100px;
       max-width: 160px;
       margin: auto;
